--- a/styles/main.css
+++ b/styles/main.css
@@ -112,6 +112,12 @@ button:hover {
     background: rgba(0, 0, 0, 0.2);
     box-shadow: 0 0 2px rgba(0, 0, 0, 1);
     z-index: 100000;
+    transition: 0.2s;
+}
+
+.toggleHeader {
+    background: #2c2e39;
+    transition: 0.5s;
 }
 
 .brand {
