--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 @keyframes testimony {
@@ -13,12 +14,14 @@
     }
 }
 
+
 :root {
     --light: #F0F1ED;
     --light-brown: #b79582;
     --gray: #938b82;
     --brown: #805d4e;
     --dark-gray: #2c2e39;
+    --light-dark-gray: #363946;
     --gray-text: #8b8b8b;
 }
 
@@ -26,6 +29,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     overflow: overlay;
     overflow-x: hidden;
+    scroll-behavior: smooth;
     /* background: var(--light); */
 }
 
@@ -53,7 +57,7 @@ a {
 
 
 
-button {
+.contactBtn {
     background: transparent;
     cursor: pointer;
     color: var(--light);
@@ -67,7 +71,7 @@ button {
     padding: 0.8em 1.6em;
 }
 
-button:hover {
+.contactBtn:hover {
     background: var(--light-brown);
     /* color: #28161C; */
     transition: 0.5s;
@@ -84,7 +88,7 @@ button:hover {
 .hero {
     width: 100%;
     height: 100vh;
-    max-height: 720px;
+    max-height: 800px;
     background: url(../assets/bg3.jpg);
     background-size: cover;
 }
@@ -105,7 +109,7 @@ button:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0.15em 2em;
+    padding: 0.15em 4em;
     position: fixed;
     top: 0;
     left: 0;
@@ -358,11 +362,25 @@ button:hover {
     background: var(--dark-gray);
     color: white;
     border: 2px solid var(--dark-gray);
+    transition: 0.2s;
+}
+.portfolioSection .portfolio .portfolio-details .portfolio-links .preview-site:hover {
+    background: var(--brown);
+    color: white;
+    border: 2px solid var(--brown);
+    transition: 0.4s;
 }
 
 .portfolioSection .portfolio .portfolio-details .portfolio-links .view-code {
     border: 2px solid var(--dark-gray);
     color: var(--dark-gray);
+    transition: 0.2s;
+}
+.portfolioSection .portfolio .portfolio-details .portfolio-links .view-code:hover {
+    background: var(--brown);
+    border: 2px solid var(--brown);
+    color: var(--light);
+    transition: 0.4s;
 }
 
 .testimonies {
@@ -373,20 +391,64 @@ button:hover {
     width: 100%;
     background: var(--dark-gray);
     color: var(--light);
+    border-bottom: 1px solid var(--light-dark-gray);
 }
 
 .testimonies h3 {
     font-family: 'Lato', sans-serif;
     text-transform: uppercase;
-    margin: 1em;
+    margin: 0.5em;
+}
+.testimonies .caption {
+    font-family: 'Lato', sans-serif;
+    font-style: italic;
+    font-weight: 400;
+    color: var(--light);
+}
+
+.testimony-wrapper {
+    perspective: 1200px;
+}
+
+
+@keyframes after {
+    0% {
+        width: 0px;
+    }
+    100% {
+        width: 90%;
+    }
 }
 
 .testimonies .testimonies-card {
+    position: relative;
     background: white;
     color: var(--dark-gray);
     padding: 4em;
-    border-radius: 40px;
+    margin: 1em;
+    border-radius: 10px;
     animation: testimony 1s;
+    transform: rotateY(-25deg);
+    transition: 1s;
+    box-shadow: 0px 0px 5px var(--gray);
+}
+
+.testimonies .testimonies-card:hover {
+    transform: rotateY(0deg);
+    transition: 1s;
+}
+
+.testimonies .testimonies-card::after {
+    position: absolute;
+    left: 0;
+    bottom: 1em;
+    content: '';
+    width: 90%;
+    margin: 0px 5%;
+    height: 5px;
+    background: var(--light);
+    animation: after 9s;
+    border-radius: 10px;
 }
 
 .testimonies .testimonies-card .testimony {
@@ -408,4 +470,17 @@ button:hover {
     font-weight: 400;
     font-style: italic;
     color: var(--brown);
+}
+
+.footer {
+    width: 100%;
+    height: 80px;
+    padding: 2em 4em;
+    background: var(--dark-gray);
+    color: var(--gray-text);
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 100;
+    justify-content: center;
+    text-align: center;
 }
