--- a/styles/main.css
+++ b/styles/main.css
@@ -1,450 +1,440 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
-
-
-
 :root {
-    --light: #F0F1ED;
-    --light-brown: #b79582;
-    --gray: #938b82;
-    --brown: #805d4e;
-    --dark-gray: #2c2e39;
-    --light-dark-gray: #363946;
-    --gray-text: #8b8b8b;
+  --light: #f0f1ed;
+  --light-brown: #b79582;
+  --gray: #938b82;
+  --brown: #805d4e;
+  --dark-gray: #2c2e39;
+  --light-dark-gray: #363946;
+  --gray-text: #8b8b8b;
 }
 
 body {
-    font-family: 'Montserrat', sans-serif;
-    overflow: overlay;
-    overflow-x: hidden;
-    scroll-behavior: smooth;
-    /* background: var(--light); */
+  font-family: "Montserrat", sans-serif;
+  overflow: overlay;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  /* background: var(--light); */
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
+  color: inherit;
 }
 
 ::-webkit-scrollbar {
-    background: transparent;
-    width: 7px;
+  background: transparent;
+  width: 7px;
 }
 
 ::-webkit-scrollbar-track {
-    background: transparent;
+  background: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: var(--brown);
-    border-radius: 10px;
+  background: var(--brown);
+  border-radius: 10px;
 }
 
 ::-webkit-scrollbar-corner {
-    border-radius: 10px;
+  border-radius: 10px;
 }
 
-
-
 .contactBtn {
-    background: transparent;
-    cursor: pointer;
-    color: var(--light);
-    background: var(--brown);
-    border: none;
-    font-size: 1em;
-    font-family: 'Aclonica', sans-serif;
-    font-weight: 700;
-    transition: 0.5s;
-    border-radius: 30px;
-    padding: 0.8em 1.6em;
+  background: transparent;
+  cursor: pointer;
+  color: var(--light);
+  background: var(--brown);
+  border: none;
+  font-size: 1em;
+  font-family: "Aclonica", sans-serif;
+  font-weight: 700;
+  transition: 0.5s;
+  border-radius: 30px;
+  padding: 0.8em 1.6em;
 }
 
 .contactBtn:hover {
-    background: var(--light-brown);
-    /* color: #28161C; */
-    transition: 0.5s;
+  background: var(--light-brown);
+  /* color: #28161C; */
+  transition: 0.5s;
 }
 .body {
-    width: 100vw;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    overflow: overlay;
+  width: 100vw;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  overflow: overlay;
 }
 
 .hero {
-    width: 100%;
-    height: 100vh;
-    max-height: 800px;
-    background: url(../assets/bg3.jpg);
-    background-size: cover;
+  width: 100%;
+  height: 100vh;
+  max-height: 800px;
+  background: url(../assets/bg3.jpg);
+  background-size: cover;
 }
 
 .heroContent {
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.8);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: white;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
 }
 
 .header {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.15em 4em;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background: rgba(0, 0, 0, 0.2);
-    box-shadow: 0 0 2px rgba(0, 0, 0, 1);
-    z-index: 100000;
-    transition: 0.2s;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.15em 4em;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 2px rgba(0, 0, 0, 1);
+  z-index: 100000;
+  transition: 0.2s;
 }
 
 .toggleHeader {
-    background: #2c2e39;
-    transition: 0.5s;
+  background: #2c2e39;
+  transition: 0.5s;
 }
 
 .brand {
-    position: relative;
-    color: var(--brown);;
-    font-size: 2.5em;
-    cursor: pointer;
-    transition: 1s;
+  position: relative;
+  color: var(--brown);
+  font-size: 2.5em;
+  cursor: pointer;
+  transition: 1s;
 }
 
 .brand span {
-    color: white;
-    margin-left: -0.75em;
+  color: white;
+  margin-left: -0.75em;
 }
 
 .brand:hover {
-    color: #FB4F93;
-    transition: 1s;
+  color: #fb4f93;
+  transition: 1s;
 }
 
 .mainHeroSection {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
 .mainHeroSection .intro {
-    font-size: 5em;
-    font-weight: 500;
-    font-family: 'Aclonica', sans-serif;
-    cursor: pointer;
+  font-size: 5em;
+  font-weight: 500;
+  font-family: "Aclonica", sans-serif;
+  cursor: pointer;
 }
 
 .mainHeroSection .intro .tag {
-    color: var(--brown);
-    transition: 0.5s;
+  color: var(--brown);
+  transition: 0.5s;
 }
 
 .mainHeroSection .intro .introFont {
-    margin: 0;
-    color: white;
-    transition: 0.1s;
+  margin: 0;
+  color: white;
+  transition: 0.1s;
 }
 .mainHeroSection .intro:hover .introFont {
-    margin: 0;
-    color: #00E6E4;
-    transition: 0.1s;
+  margin: 0;
+  color: #00e6e4;
+  transition: 0.1s;
 }
-.mainHeroSection .intro:hover .two{
-    margin: 0;
-    color: #FB4F93;
-    transition: 0.1s;
+.mainHeroSection .intro:hover .two {
+  margin: 0;
+  color: #fb4f93;
+  transition: 0.1s;
 }
 .mainHeroSection .intro:hover .tag {
-    color: #FB4F93;
-    transition: 0.5s;
+  color: #fb4f93;
+  transition: 0.5s;
 }
 .mainHeroSection p {
-    font-size: 1em;
-    font-weight: 500;
-    font-family: 'Montserrat', sans-serif;
-    font-style: italic;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: "Montserrat", sans-serif;
+  font-style: italic;
 }
 
 .headerRight {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .header nav {
-    margin: 0 1em;
-    display: flex;
+  margin: 0 1em;
+  display: flex;
 }
 
 .header nav .navLink {
-    padding: 0.5em;
-    border-bottom: 2px solid transparent;
-    transition: 0.5s;
-    cursor: pointer;
+  padding: 0.5em;
+  border-bottom: 2px solid transparent;
+  transition: 0.5s;
+  cursor: pointer;
 }
 
 .header nav .navLink:hover {
-    transition: 0.5s;
-    border-bottom: 2px solid var(--brown);
+  transition: 0.5s;
+  border-bottom: 2px solid var(--brown);
 }
 
 .header nav .navLink a {
-    color: var(--light);
+  color: var(--light);
 }
 .aboutSection {
-    line-height: 2em;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: var(--dark-gray);
-    padding-bottom: 4em;
+  line-height: 2em;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: var(--dark-gray);
+  padding-bottom: 4em;
 }
 
 .avatarSection {
-    width: 100%;
-    background: var(--light);
-    background-size: cover;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  background: var(--light);
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .avatarWrapper {
-    width: 240px;
-    height: 240px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 1em;
-    background: var(--dark-gray);
-    overflow: hidden;
-    z-index: 100;
-    margin: 4em;
-    box-shadow: 0px 0px 4px var(--dark-gray);
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1em;
+  background: var(--dark-gray);
+  overflow: hidden;
+  z-index: 100;
+  margin: 4em;
+  box-shadow: 0px 0px 4px var(--dark-gray);
 }
 
 .avatarWrapper img {
-    margin-top: 2em;
-    width: 100%;
-    border-radius: 50%;
+  margin-top: 2em;
+  width: 100%;
+  border-radius: 50%;
 }
 
 .aboutSectionText {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 90%;
-    border-radius: 40px;
-    margin-top: -8em;
-    background-color: white;
-    /* background: url(../assets/avibg.jpg); */
-    background-size: cover;
-    /* background: #FB4F93; */
-    padding: 5em;
-    box-shadow: 0px 0px 4px rgb(216, 216, 216);
-    /* color: white; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  border-radius: 40px;
+  margin-top: -8em;
+  background-color: white;
+  /* background: url(../assets/avibg.jpg); */
+  background-size: cover;
+  /* background: #FB4F93; */
+  padding: 5em;
+  box-shadow: 0px 0px 4px rgb(216, 216, 216);
+  /* color: white; */
 }
 
 .aboutSectionText h3 {
-    font-size: 2em;
-    margin: 1em auto;
+  font-size: 2em;
+  margin: 1em auto;
 }
 
 .aboutSectionText h3 span {
-    color: var(--brown);
+  color: var(--brown);
 }
 
 .aboutSectionText .aboutText {
-    width: 60ch;
+  width: 60ch;
 }
 
 .portfolioSection {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 5em 3em;
-    padding-bottom: 0;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5em 3em;
+  padding-bottom: 0;
+  width: 100%;
 }
 
 .portfolioSection h3 {
-    font-family: 'Lato', sans-serif;
-    text-transform: uppercase;
-    color: var(--gray);
-    margin: 1em;
+  font-family: "Lato", sans-serif;
+  text-transform: uppercase;
+  color: var(--gray);
+  margin: 1em;
 }
 
 .portfolioSection .portfolio {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 400px;
-    width: 100%;
-    padding: 3em 6em;
-    gap: 8em;
-    border-bottom: 1px solid var(--light);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 400px;
+  width: 100%;
+  padding: 3em 6em;
+  gap: 8em;
+  border-bottom: 1px solid var(--light);
 }
 
 .portfolioSection .portfolio .portfolio-img {
-    width: 50%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    flex-direction: row-reverse;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: row-reverse;
 }
 
 .portfolioSection .portfolio .portfolio-img img {
-    height: 90%;
+  height: 90%;
 }
 
 .portfolioSection .portfolio .portfolio-details {
-    width: 50%;
+  width: 50%;
 }
 
 .portfolioSection .portfolio .portfolio-details .portfolio-details-header {
-    font-family: 'Lato', sans-serif;
-    padding: 1em 0;
-    padding-top: 0;
-    font-weight: 700;
+  font-family: "Lato", sans-serif;
+  padding: 1em 0;
+  padding-top: 0;
+  font-weight: 700;
 }
 
 .portfolioSection .portfolio .portfolio-details .portfolio-details-description {
-    font-size: 0.9em;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
-    line-height: 1.5em;
-    color: var(--gray-text);
-    width: 45ch;
+  font-size: 0.9em;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  line-height: 1.5em;
+  color: var(--gray-text);
+  width: 45ch;
 }
 
 .portfolioSection .portfolio .portfolio-details .portfolio-links {
-    display: flex;
-    margin: 1.5em 0;
+  display: flex;
+  margin: 1.5em 0;
 }
 
 .portfolioSection .portfolio .portfolio-details .portfolio-links a {
-    padding: 0.8em 1.6em;
-    font-family: 'Lato', sans-serif;
-    border-radius: 30px;
-    margin: 0 0.5em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  padding: 0.8em 1.6em;
+  font-family: "Lato", sans-serif;
+  border-radius: 30px;
+  margin: 0 0.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
 
 .portfolioSection .portfolio .portfolio-details .portfolio-links .preview-site {
-    background: var(--dark-gray);
-    color: white;
-    border: 2px solid var(--dark-gray);
-    transition: 0.2s;
+  background: var(--dark-gray);
+  color: white;
+  border: 2px solid var(--dark-gray);
+  transition: 0.2s;
 }
-.portfolioSection .portfolio .portfolio-details .portfolio-links .preview-site:hover {
-    background: var(--brown);
-    color: white;
-    border: 2px solid var(--brown);
-    transition: 0.4s;
+.portfolioSection
+  .portfolio
+  .portfolio-details
+  .portfolio-links
+  .preview-site:hover {
+  background: var(--brown);
+  color: white;
+  border: 2px solid var(--brown);
+  transition: 0.4s;
 }
 
 .portfolioSection .portfolio .portfolio-details .portfolio-links .view-code {
-    border: 2px solid var(--dark-gray);
-    color: var(--dark-gray);
-    transition: 0.2s;
+  border: 2px solid var(--dark-gray);
+  color: var(--dark-gray);
+  transition: 0.2s;
 }
-.portfolioSection .portfolio .portfolio-details .portfolio-links .view-code:hover {
-    background: var(--brown);
-    border: 2px solid var(--brown);
-    color: var(--light);
-    transition: 0.4s;
+.portfolioSection
+  .portfolio
+  .portfolio-details
+  .portfolio-links
+  .view-code:hover {
+  background: var(--brown);
+  border: 2px solid var(--brown);
+  color: var(--light);
+  transition: 0.4s;
 }
 
-
-
-
+/* testimonies */
 .testimonies {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 5em 3em;
-    width: 100%;
-    background: var(--dark-gray);
-    color: var(--light);
-    border-bottom: 1px solid var(--light-dark-gray);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5em 3em;
+  width: 100%;
+  background: var(--dark-gray);
+  color: var(--light);
+  border-bottom: 1px solid var(--light-dark-gray);
 }
 
 .testimonies h3 {
-    font-family: 'Lato', sans-serif;
-    text-transform: uppercase;
-    margin: 0.5em;
+  font-family: "Lato", sans-serif;
+  text-transform: uppercase;
+  margin: 0.5em;
 }
 .testimonies .caption {
-    font-family: 'Lato', sans-serif;
-    font-style: italic;
-    font-weight: 400;
-    color: var(--light);
+  font-family: "Lato", sans-serif;
+  font-style: italic;
+  font-weight: 400;
+  color: var(--light);
 }
 
 .testimony-wrapper {
-    perspective: 1200px;
+  perspective: 1200px;
 }
 
 @keyframes testimony {
-    0% {
-        transform: rotateY(180deg);
-        opacity: 0;
-    }
-    100% {
-        transform: rotateY(-25deg);
-        opacity: 1;
-    }
+  0% {
+    /* transform: rotateY(180deg); */
+    opacity: 0;
+  }
+  100% {
+    /* transform: rotateY(-25deg); */
+    opacity: 1;
+  }
 }
 
 @keyframes after {
-    0% {
-        width: 0px;
-    }
-    100% {
-        width: 90%;
-    }
+  0% {
+    width: 0px;
+  }
+  100% {
+    width: 90%;
+  }
 }
 
 .testimonies .testimonies-card {
-    position: relative;
-    background: white;
-    color: var(--dark-gray);
-    padding: 4em;
-    margin: 1em;
-    border-radius: 10px;
-    animation: testimony 2s;
-    transform: rotateY(-25deg);
-    transition: 1s;
-    box-shadow: 0px 0px 5px var(--gray);
+  min-width: 640px;
+  color: var(--dark-gray);
+  margin-top: 3em;
+  transition: 1s;
 }
 
-.testimonies .testimonies-card:hover {
-    transform: rotateY(5deg);
-    transition: 1s;
-}
-
-.testimonies .testimonies-card::after {
+/* .testimonies .testimonies-card::after {
     position: absolute;
     left: 0;
     bottom: 1em;
@@ -455,38 +445,184 @@ a {
     background: var(--light);
     animation: after 9s;
     border-radius: 10px;
+} */
+
+.testimony-card-content {
+  position: relative;
+  transition: transform 4s;
+  transform-style: preserve-3d;
+  padding: 5em;
+  text-align: center;
+  background: var(--light-dark-gray);
+  border-radius: 10px;
 }
 
-.testimonies .testimonies-card .testimony {
-    width: 48ch;
-    text-align: center;
-    line-height: 1.7em;
+.testimonies .testimonies-card:hover .testimony-card-content {
+  transform: rotateY(0.5turn);
 }
 
+.testimony-card-front,
+.testimony-card-back {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  min-height: 200px;
+  padding: 3em 4em;
+  backface-visibility: hidden;
+  transform-style: preserve-3d;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+}
+
+.testimony {
+  /* max-width: 48ch; */
+  font-family: "Aclonica", sans-serif;
+  font-size: 0.9em;
+  text-align: center;
+  line-height: 1.7em;
+  transform: translateZ(100px);
+  margin: 4em 0;
+}
+
+.testimony-card-front {
+  background: var(--light-dark-gray);
+  color: white;
+  animation: testimony 1s;
+}
+
+.testimony-card-back {
+  padding: 4em 0;
+  transform: rotateY(0.5turn);
+  background: var(--light-dark-gray);
+  color: white;
+}
+
+.author-details {
+  transform-style: preserve-3d;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  gap: 4em;
+}
 .testimonies .testimonies-card .author {
-    text-align: right;
-    margin: 2em 0 0 0;
-    font-weight: 600;
-    font-family: 'Lato', sans-serif;
-    color: var(--dark-gray);
+  text-align: left;
+  font-weight: 600;
+  font-family: "Lato", sans-serif;
+  transform: translateZ(100px);
+}
+.author-details img {
+  transform: translateZ(100px);
+  height: 100px;
 }
 
 .testimonies .testimonies-card .author .location {
-    margin: 0 1em;
-    font-weight: 400;
-    font-style: italic;
-    color: var(--brown);
+  font-weight: 400;
+  font-style: italic;
+  /* color: var(--brown); */
 }
 
 .footer {
-    width: 100%;
-    height: 80px;
-    padding: 2em 4em;
-    background: var(--dark-gray);
-    color: var(--gray-text);
-    display: flex;
-    flex-direction: column;
-    flex: 1 1 100;
-    justify-content: center;
-    text-align: center;
+  width: 100%;
+  height: 80px;
+  padding: 2em 4em;
+  background: var(--dark-gray);
+  color: var(--gray-text);
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 100;
+  justify-content: center;
+  text-align: center;
+}
+
+
+@media screen and (max-width: 420px) {
+    .header {
+        padding: 0.15em 1.5em;
+    }
+    .brand {
+        font-size: 2em;
+    }
+    .mainHeroSection {
+        padding: 0 2em;
+    }
+    .mainHeroSection .intro {
+        font-size: 3em
+    }
+    .header nav .navLink {
+        font-size: 0.8em;
+    }
+    .contactBtn {
+        font-size: 0.8em;
+        padding: 0.4em 0.8;
+    }
+    .aboutSectionText {
+        padding: 4em 1.5em;
+    }
+    .aboutSectionText h3 {
+        font-size: 1.5em;
+    }
+    .aboutSectionText .aboutText {
+        font-size: 0.8em;
+        width: 30ch;
+        line-height: 1.8em;
+    }
+    .portfolioSection {
+        padding: 4em 1.5em;
+    }
+    .portfolioSection .portfolio {
+        padding: 2em 1em;
+        flex-direction: column;
+        height: fit-content;
+        gap: 2em;
+    }
+    .portfolioSection .portfolio .portfolio-img {
+        width: 100%;
+        flex-direction: row;
+    }
+
+    .portfolioSection .portfolio .portfolio-img  img {
+        width: 100%;
+    }
+
+    .portfolioSection .portfolio .portfolio-details {
+        width: 100%;
+        text-align: center;
+    }
+    .portfolioSection .portfolio .portfolio-details .portfolio-details-description {
+        font-size: 0.8em;
+        width: 36ch;
+    }
+    .portfolioSection .portfolio .portfolio-details .portfolio-links {
+        justify-content: center;
+    }
+    .testimonies {
+        padding: 3em 1.5em;
+        padding-bottom: 28em;
+        text-align: center;
+        width: 100%;
+
+    }
+    .testimony-wrapper {
+        width: 100%;
+    }
+    .testimonies .testimonies-card {
+        min-width: 100%;
+    }
+    .testimony-card-content {
+        padding: 1em
+    }
+
+    .testimony-card-front,
+    .testimony-card-back {
+        min-height: 400px
+    }
+    .testimony {
+        font-weight: 400;
+        font-size: 0.8em;
+    }
 }
