--- a/styles/main.css
+++ b/styles/main.css
@@ -536,7 +536,6 @@ a {
   color: var(--gray-text);
   display: flex;
   flex-direction: column;
-  flex: 1 1 100;
   justify-content: center;
   text-align: center;
 }
@@ -806,6 +805,10 @@ a {
     }
     .portfolioSection .portfolio .portfolio-details .portfolio-links {
         justify-content: center;
+    }
+    .footer {
+      font-size: 0.8em;
+      padding: 2em 2em;
     }
     /* .testimonies {
         padding: 3em 1.5em;
