--- a/styles/main.css
+++ b/styles/main.css
@@ -761,6 +761,12 @@ a {
   .author-details {
     flex-direction: column;
   }
+  .footer{
+    flex-direction: column;
+  }
+  .footer_author {
+    border-right: 0px;
+  }
 }
 @media screen and (max-width: 420px) {
     .header {
