--- a/styles/main.scss
+++ b/styles/main.scss
@@ -114,7 +114,7 @@ a {
   top: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.2);
-  backdrop-filter: blur(1px);
+  // backdrop-filter: blur(1px);
   box-shadow: 0 0 2px rgba(0, 0, 0, 1);
   z-index: 100000;
   transition: 0.2s;
