tweaking background images

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -78,7 +78,7 @@ a {
 .hero {
   width: 100%;
   height: 100vh;
-  background: url(../assets/bg3.jpg);
+  background: url(../assets/bg5.png);
   background-size: cover;
   position: relative;
 
@@ -584,7 +584,7 @@ a {
 .contact-page {
   width: 100vw;
   min-height: 100vh;
-  // background: url("../assets/pavan-trikutam-71CjSSB83Wo-unsplash.jpg");
+  background: url(/assets/bg5.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
