--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,7 @@ a {
 .hero {
   width: 100%;
   height: 100vh;
-  background: url(../assets/bg3.jpg);
+  background: url(../assets/bg5.png);
   background-size: cover;
   position: relative;
 }
@@ -774,6 +774,7 @@ a {
 .contact-page {
   width: 100vw;
   min-height: 100vh;
+  background: url(/assets/bg5.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
