--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,79 @@ body {
   overflow: overlay;
   overflow-x: hidden;
   scroll-behavior: smooth;
+  position: relative;
+  cursor: none;
   /* background: var(--light); */
+}
+
+a {
+  cursor: none;
+}
+
+@-webkit-keyframes animateCursorOuter {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes animateCursorOuter {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+.cursor-inner {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 5px;
+  height: 5px;
+  background: var(--light-brown);
+  border-radius: 50%;
+  z-index: 10000;
+  -webkit-transform: translate3d(-50%, -50%, 0);
+          transform: translate3d(-50%, -50%, 0);
+  pointer-events: none;
+}
+
+.cursor-outer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 30px;
+  height: 30px;
+  background: transparent;
+  border: 0.001em solid var(--light-brown);
+  -webkit-box-shadow: 1px 0 20px var(--light-brown);
+          box-shadow: 1px 0 20px var(--light-brown);
+  opacity: 0.3;
+  margin-left: -15px;
+  margin-top: -15px;
+  border-radius: 50%;
+  z-index: 10000;
+  -webkit-transition: 0.2s ease-out;
+  transition: 0.2s ease-out;
+  pointer-events: none;
+  -webkit-animation: animateCursorOuter 0.5s infinite;
+          animation: animateCursorOuter 0.5s infinite;
 }
 
 a {
@@ -50,7 +122,7 @@ a {
 
 .contactBtn {
   background: transparent;
-  cursor: pointer;
+  cursor: none;
   color: var(--light);
   background: var(--brown);
   border: none;
@@ -158,7 +230,7 @@ a {
   position: relative;
   color: var(--brown);
   font-size: 2.5em;
-  cursor: pointer;
+  cursor: none;
   -webkit-transition: 1s;
   transition: 1s;
 }
@@ -192,7 +264,7 @@ a {
   font-size: 5em;
   font-weight: 500;
   font-family: "Aclonica", sans-serif;
-  cursor: pointer;
+  cursor: none;
 }
 
 .mainHeroSection .intro .tag {
@@ -256,7 +328,7 @@ a {
   border-bottom: 2px solid transparent;
   -webkit-transition: 0.5s;
   transition: 0.5s;
-  cursor: pointer;
+  cursor: none;
 }
 
 .header nav .navLink:hover {
@@ -935,7 +1007,7 @@ a {
   border: 0px;
   border-radius: 5px;
   margin: 1em 0;
-  cursor: pointer;
+  cursor: none;
 }
 
 .dark-header {
