--- a/styles/main.scss
+++ b/styles/main.scss
@@ -64,16 +64,14 @@ a {
   left: 0;
   width: 30px;
   height: 30px;
-  background: transparent;
-  border: 0.001em solid var(--light-brown);
-  box-shadow: 1px 0 20px var(--light-brown);
-  opacity: 0.3;
+  background: rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(0.075em);
+  box-shadow: 0 0 20px var(--light-brown);
   margin-left: -15px;
   margin-top: -15px;
   border-radius: 50%;
   z-index: 10000;
-  // transform: translate3d(-50%, -50%, 0);
-  transition: 0.2s ease-out;
+  transition: 0.15s ease-out;
   pointer-events: none;
   animation: animateCursorOuter 0.5s infinite;
 }
@@ -209,6 +207,11 @@ a {
   font-weight: 500;
   font-family: "Aclonica", sans-serif;
   cursor: none;
+  transition: 1s;
+
+  &:hover {
+    transform: scale(1.1);
+  }
 }
 
 .mainHeroSection .intro .tag {
@@ -368,6 +371,17 @@ a {
   padding: 3em 6em;
   gap: 8em;
   border-bottom: 1px solid var(--light);
+  transition: 0.5s;
+
+  &:hover {
+    transform: scale(1.05);
+  }
+
+  &:nth-child(odd) {
+    .portfolio-img img:hover {
+      transform: scale(1.2) rotate(-5deg);
+    }
+  }
 }
 
 .portfolioSection .portfolio .portfolio-img {
@@ -380,6 +394,11 @@ a {
 
 .portfolioSection .portfolio .portfolio-img img {
   height: 90%;
+  transition: 1s;
+
+  &:hover {
+    transform: scale(1.2) rotate(5deg);
+  }
 }
 
 .portfolioSection .portfolio .portfolio-details {
