--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@
 }
 
 body {
+  width: 100vw;
   font-family: "Montserrat", sans-serif;
   overflow: overlay;
   overflow-x: hidden;
@@ -155,7 +156,6 @@ a {
       -ms-flex-direction: column;
           flex-direction: column;
   position: relative;
-  overflow: overlay;
 }
 
 .hero {
