minor styling adjustment and bug fixes

--- a/css/main.css
+++ b/css/main.css
@@ -82,11 +82,8 @@ a {
   left: 0;
   width: 30px;
   height: 30px;
-  background: rgba(0, 0, 0, 0.1);
-  -webkit-backdrop-filter: blur(0.075em);
-          backdrop-filter: blur(0.075em);
-  -webkit-box-shadow: 0 0 20px var(--light-brown);
-          box-shadow: 0 0 20px var(--light-brown);
+  -webkit-box-shadow: 0 0 4px var(--light-brown);
+          box-shadow: 0 0 4px var(--light-brown);
   margin-left: -15px;
   margin-top: -15px;
   border-radius: 50%;
@@ -94,8 +91,8 @@ a {
   -webkit-transition: 0.15s ease-out;
   transition: 0.15s ease-out;
   pointer-events: none;
-  -webkit-animation: animateCursorOuter 0.5s infinite;
-          animation: animateCursorOuter 0.5s infinite;
+  -webkit-animation: animateCursorOuter 1s infinite;
+          animation: animateCursorOuter 1s infinite;
 }
 
 a {
@@ -1125,19 +1122,25 @@ a {
     position: absolute;
     background: rgba(54, 57, 70, 0.9);
     top: 0;
-    left: 0;
-    width: 100vw;
-    height: 0px;
+    right: 0;
+    width: 85vw;
+    height: 100vh;
     overflow: hidden;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
+    transition: 1s;
+    -webkit-transform: translateX(100vw);
+            transform: translateX(100vw);
+    opacity: 0.2;
   }
   .headerRightHeight {
-    height: 50vh;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-    -webkit-backdrop-filter: blur(30px);
-            backdrop-filter: blur(30px);
+    -webkit-transform: translateX(0vw);
+            transform: translateX(0vw);
+    height: 100vh;
+    -webkit-transition: 0.8s;
+    transition: 0.8s;
+    -webkit-backdrop-filter: blur(10px);
+            backdrop-filter: blur(10px);
+    background: rgba(26, 27, 34, 0.85);
+    opacity: 1;
   }
   .headerRight nav {
     padding: 3em 0 0 0;
