--- a/styles/main.scss
+++ b/styles/main.scss
@@ -11,6 +11,7 @@
   --light-brown: #b79582;
   --gray: #938b82;
   --brown: #805d4e;
+  --dark-brown: #6f4f42;
   --dark-gray: #2c2e39;
   --light-dark-gray: #363946;
   --gray-text: #8b8b8b;
@@ -54,7 +55,7 @@ a {
   // margin-left: -4px;
   // margin-top: -4px;
   border-radius: 50%;
-  z-index: 10000;
+  z-index: 1000000;
   transform: translate3d(-50%, -50%, 0);
   pointer-events: none;
   // animation: animateCursorOuter 0.5s infinite;
@@ -72,7 +73,7 @@ a {
   margin-left: -15px;
   margin-top: -15px;
   border-radius: 50%;
-  z-index: 10000;
+  z-index: 1000000;
   transition: 0.15s ease-out;
   pointer-events: none;
   animation: animateCursorOuter 1s infinite;
@@ -116,7 +117,7 @@ a {
 }
 
 .contactBtn:hover {
-  background: var(--light-brown);
+  background: var(--dark-brown);
   /* color: #28161C; */
   transition: 0.5s;
 }
@@ -644,6 +645,11 @@ a {
 }
 .footer_links_item {
   margin: auto 0.5em;
+  transition: 0.4s ease-in-out;
+
+  &:hover {
+    color: var(--light);
+  }
 }
 
 #myVideo {
@@ -669,6 +675,18 @@ a {
   font-family: "Montserrat", sans-serif;
   overflow: hidden;
   color: white;
+  position: relative;
+
+  &::before {
+    position: absolute;
+    content: " ";
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(10px);
+  }
 
   &__left {
     width: 30%;
@@ -689,10 +707,10 @@ a {
 
     form {
       width: fit-content;
-      padding: 1.5rem 2rem;
+      padding: 2rem 2rem;
       // box-shadow: 1px 2px 4px gray;
-      border-radius: 5px;
-      background-color: rgba(0, 0, 0, 0.3);
+      border-radius: 1rem;
+      background-color: rgba(255, 255, 255, 0.075);
       backdrop-filter: blur(5px);
       background-clip: border-box;
 
@@ -708,6 +726,12 @@ a {
         font-family: "aclonica", sans-serif;
         font-weight: 500;
         font-size: 2em;
+        padding: 0.5rem 0 1rem 0;
+
+        span {
+          color: var(--light-brown);
+          margin-left: -0.25rem;
+        }
       }
 
       .form-group-wrapper {
@@ -724,6 +748,7 @@ a {
         display: flex;
         flex-direction: column;
         padding: 0.5rem 0;
+        gap: 0.5rem;
 
         label {
           font-weight: 600;
@@ -760,14 +785,20 @@ a {
           font-size: 0.9em;
           font-weight: 600;
           width: 100%;
-          background: white;
+          background: var(--light);
           color: var(--dark-gray);
           padding: 1em;
           border: 0px;
           border-radius: 5px;
           margin: 1em 0;
           cursor: none;
+          transition: 0.4s ease-in-out;
           // box-shadow: 1px 2px 4px var(--light);
+
+          &:hover {
+            background: var(--dark-brown);
+            color: var(--light);
+          }
         }
       }
     }
