--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,6 @@ a {
             transform: scale(1);
   }
 }
-
 .cursor-inner {
   position: fixed;
   top: 0;
@@ -159,11 +158,11 @@ a {
 .hero {
   width: 100%;
   height: 100vh;
-  background: url(../assets/bg5.png);
+  background-color: rgba(0, 0, 0, 0.8);
+  background-image: url(../assets/bg5.png);
   background-size: cover;
   position: relative;
 }
-
 .hero #videoBg {
   position: absolute;
   top: 0;
@@ -178,7 +177,7 @@ a {
 .heroContent {
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(0, 0, 0, 0.75);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -211,8 +210,8 @@ a {
   top: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.2);
-  -webkit-box-shadow: 0 0 2px black;
-          box-shadow: 0 0 2px black;
+  -webkit-box-shadow: 0 0 2px rgb(0, 0, 0);
+          box-shadow: 0 0 2px rgb(0, 0, 0);
   z-index: 100000;
   -webkit-transition: 0.2s;
   transition: 0.2s;
@@ -266,7 +265,6 @@ a {
   -webkit-transition: 1s;
   transition: 1s;
 }
-
 .mainHeroSection .intro:hover {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
@@ -436,8 +434,8 @@ a {
   background-size: cover;
   /* background: #FB4F93; */
   padding: 5em;
-  -webkit-box-shadow: 0px 0px 4px #d8d8d8;
-          box-shadow: 0px 0px 4px #d8d8d8;
+  -webkit-box-shadow: 0px 0px 4px rgb(216, 216, 216);
+          box-shadow: 0px 0px 4px rgb(216, 216, 216);
   /* color: white; */
 }
 
@@ -451,7 +449,8 @@ a {
 }
 
 .aboutSectionText .aboutText {
-  width: 60ch;
+  width: auto;
+  max-width: 80ch;
 }
 
 .portfolioSection {
@@ -496,7 +495,6 @@ a {
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
-
 .portfolioSection .portfolio:hover {
   -webkit-transform: scale(1.05);
           transform: scale(1.05);
@@ -574,11 +572,7 @@ a {
   transition: 0.2s;
 }
 
-.portfolioSection
-.portfolio
-.portfolio-details
-.portfolio-links
-.preview-site:hover {
+.portfolioSection .portfolio .portfolio-details .portfolio-links .preview-site:hover {
   background: var(--brown);
   color: white;
   border: 2px solid var(--brown);
@@ -593,11 +587,7 @@ a {
   transition: 0.2s;
 }
 
-.portfolioSection
-.portfolio
-.portfolio-details
-.portfolio-links
-.view-code:hover {
+.portfolioSection .portfolio .portfolio-details .portfolio-links .view-code:hover {
   background: var(--brown);
   border: 2px solid var(--brown);
   color: var(--light);
@@ -664,7 +654,6 @@ a {
     opacity: 1;
   }
 }
-
 @-webkit-keyframes after {
   0% {
     width: 0px;
@@ -673,7 +662,6 @@ a {
     width: 90%;
   }
 }
-
 @keyframes after {
   0% {
     width: 0px;
@@ -682,7 +670,6 @@ a {
     width: 90%;
   }
 }
-
 .testimonies .testimonies-card {
   min-width: 640px;
   color: var(--dark-gray);
@@ -847,7 +834,6 @@ a {
   -webkit-transition: 0.4s ease-in-out;
   transition: 0.4s ease-in-out;
 }
-
 .footer_links_item:hover {
   color: var(--light);
 }
@@ -884,7 +870,6 @@ a {
   color: white;
   position: relative;
 }
-
 .contact-page::before {
   position: absolute;
   content: " ";
@@ -896,17 +881,14 @@ a {
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
 }
-
 .contact-page__left {
   width: 30%;
   overflow: hidden;
 }
-
 .contact-page__left img {
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 .contact-page__right {
   width: 100%;
   height: 100%;
@@ -921,7 +903,6 @@ a {
       -ms-flex-align: center;
           align-items: center;
 }
-
 .contact-page__right form {
   width: -webkit-fit-content;
   width: -moz-fit-content;
@@ -933,31 +914,26 @@ a {
           backdrop-filter: blur(5px);
   background-clip: border-box;
 }
-
 @media screen and (max-width: 600px) {
   .contact-page__right form {
     margin-top: 6rem;
   }
 }
-
 @media screen and (max-width: 420px) {
   .contact-page__right form {
     margin-top: 4rem;
   }
 }
-
 .contact-page__right form h2 {
   font-family: "aclonica", sans-serif;
   font-weight: 500;
   font-size: 2em;
   padding: 0.5rem 0 1rem 0;
 }
-
 .contact-page__right form h2 span {
   color: var(--light-brown);
   margin-left: -0.25rem;
 }
-
 .contact-page__right form .form-group-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -965,7 +941,6 @@ a {
   width: 100%;
   gap: 1em;
 }
-
 @media screen and (max-width: 600px) {
   .contact-page__right form .form-group-wrapper {
     -webkit-box-orient: vertical;
@@ -974,7 +949,6 @@ a {
             flex-direction: column;
   }
 }
-
 .contact-page__right form .form-group {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -986,13 +960,11 @@ a {
   padding: 0.5rem 0;
   gap: 0.5rem;
 }
-
 .contact-page__right form .form-group label {
   font-weight: 600;
   font-size: 0.9em;
   color: white;
 }
-
 .contact-page__right form .form-group input,
 .contact-page__right form .form-group textarea {
   margin: 0.3em 0;
@@ -1005,38 +977,31 @@ a {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
 }
-
-.contact-page__right form .form-group input::-webkit-input-placeholder,
-.contact-page__right form .form-group textarea::-webkit-input-placeholder {
+.contact-page__right form .form-group input::-webkit-input-placeholder, .contact-page__right form .form-group textarea::-webkit-input-placeholder {
   color: var(--light);
 }
-
-.contact-page__right form .form-group input:-ms-input-placeholder,
-.contact-page__right form .form-group textarea:-ms-input-placeholder {
+.contact-page__right form .form-group input::-moz-placeholder, .contact-page__right form .form-group textarea::-moz-placeholder {
   color: var(--light);
 }
-
-.contact-page__right form .form-group input::-ms-input-placeholder,
-.contact-page__right form .form-group textarea::-ms-input-placeholder {
+.contact-page__right form .form-group input:-ms-input-placeholder, .contact-page__right form .form-group textarea:-ms-input-placeholder {
   color: var(--light);
 }
-
+.contact-page__right form .form-group input::-ms-input-placeholder, .contact-page__right form .form-group textarea::-ms-input-placeholder {
+  color: var(--light);
+}
 .contact-page__right form .form-group input::placeholder,
 .contact-page__right form .form-group textarea::placeholder {
   color: var(--light);
 }
-
 .contact-page__right form .form-group .message {
   height: 6rem;
   width: 20rem;
   word-wrap: break-word;
   width: 100%;
 }
-
 .contact-page__right form .submitBtn-wrapper {
   width: 100%;
 }
-
 .contact-page__right form .submitBtn-wrapper button {
   font-size: 0.9em;
   font-weight: 600;
@@ -1051,7 +1016,6 @@ a {
   -webkit-transition: 0.4s ease-in-out;
   transition: 0.4s ease-in-out;
 }
-
 .contact-page__right form .submitBtn-wrapper button:hover {
   background: var(--dark-brown);
   color: var(--light);
@@ -1078,7 +1042,7 @@ a {
     transition: 0.5s;
   }
   .aboutSectionText .aboutText {
-    width: 48ch;
+    max-width: 48ch;
     color: var(--light-dark-gray);
     font-size: 0.9em;
   }
@@ -1097,10 +1061,7 @@ a {
   .portfolioSection .portfolio .portfolio-img img {
     height: 80%;
   }
-  .portfolioSection
-.portfolio
-.portfolio-details
-.portfolio-details-description {
+  .portfolioSection .portfolio .portfolio-details .portfolio-details-description {
     font-size: 0.8em;
     font-weight: 400;
     width: 36ch;
@@ -1115,7 +1076,6 @@ a {
     font-size: 1em;
   }
 }
-
 @media screen and (max-width: 770px) {
   .mainHeroSection {
     padding: 0 2em;
@@ -1264,7 +1224,7 @@ a {
   }
   .aboutSectionText .aboutText {
     font-size: 0.8em;
-    width: 36ch;
+    max-width: 40ch;
     line-height: 1.8em;
   }
   .portfolioSection .portfolio {
@@ -1312,10 +1272,7 @@ a {
         -ms-flex-align: center;
             align-items: center;
   }
-  .portfolioSection
-.portfolio
-.portfolio-details
-.portfolio-details-description {
+  .portfolioSection .portfolio .portfolio-details .portfolio-details-description {
     font-size: 0.8em;
     width: 40ch;
   }
@@ -1363,7 +1320,6 @@ a {
     border-right: 0px;
   }
 }
-
 @media screen and (max-width: 420px) {
   .header {
     padding: 0.15em 1.2em;
@@ -1386,7 +1342,7 @@ a {
     padding: 0.4em 0.8;
   }
   .aboutSectionText .aboutText {
-    width: 30ch;
+    max-width: 32ch;
   }
   .portfolioSection {
     padding: 4em 1.5em;
@@ -1429,10 +1385,7 @@ a {
         -ms-flex-align: center;
             align-items: center;
   }
-  .portfolioSection
-.portfolio
-.portfolio-details
-.portfolio-details-description {
+  .portfolioSection .portfolio .portfolio-details .portfolio-details-description {
     font-size: 0.8em;
     width: 30ch;
   }
